# server/routes/users/index.js
@@ -152,6 +152,18 @@ router.get(
  * @swagger
  *  /api/users/me/calculet:
  *    get:
+ *      parameters:
+ *        - name: blocked
+ *          in: query
+ *          required: false
+ *          description: 계산기 공개 여부 필터
+ *          schema:
+ *            type: array
+ *            style: simple
+ *            items:
+ *              type: integer
+ *        - $ref: "#/components/parameters/size"
+ *        - $ref: "#/components/parameters/page"
  *      tags: [users-calculet]
  *      summary: 로그인 한 사용자(본인)의 마이 계산기 목록 요청 <Auth>
  *      description: 마이 계산기 목록들 (임시 계산기 포함)
@@ -162,6 +174,12 @@ router.get(
 router.get(
   "/me/calculet",
   auth.validate,
+  [
+    query("blocked.*").optional().isInt({ gt: -1, lt: 3 }).toInt(),
+    query("size").isInt({ gt: 0 }).toInt(),
+    query("page").isInt({ gt: 0 }).toInt(),
+    inputValidator,
+  ],
   errorHandler.dbWrapper(getMyCalculetList)
 );
 
